--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Kuanchiliao1/project_template_repo/issues"
   },
-  "homepage": "https://github.com/Kuanchiliao1/project_template_repo#readme"
+  "homepage": "https://github.com/Kuanchiliao1/project_template_repo#readme",
+  "devDependencies": {
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
+  }
 }
