--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
   },
   "homepage": "https://github.com/Kuanchiliao1/project_template_repo#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
-    "webpack": "^5.81.0",
+    "webpack": "^5.86.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
-    "@babel/core": "^7.21.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "babel-loader": "^9.1.2",
     "eslint-config-wesbos": "^3.2.3",
     "file-loader": "^6.2.0",
     "lodash": "^4.17.21"
