--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "build": "webpack"
   },
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/Kuanchiliao1/project_template_repo#readme",
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.22.9",
     "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.6.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.0.2",
